--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <div id="gamePart1">
             <h1>MISSION: ANTARCTICA</h1>
             <li id="gamePart1Selection1">Press 1 to start.</li>
-            <li id="gamePart1Selection2">Press 2 to access help page.</li>
-            <li id="gamePart1Selection3">Press 3 to learn more about Antarctica.</li>
+            <li id="gamePart1Selection2">Press 2 to access the wiki page (Pop Out)</li>
             <li>Press ENTER to confirm selection.</li>
             <li>Press ` at any time to reload frame.</li>
             <br><br>
@@ -48,32 +47,17 @@
             <li id="gamePart3Selection3">Press 3 to call S&R (search & rescue) and end the expedition here.</li>
             <p>Here are your stats, including health, morale, and rations</p>
         </div>
+        <div id="gamePart4">
+            <h1>Expedition: Mount Vinson Massif, Mountain Base</h1>
+            <p>You've finally made it to Mount Vinson Massif, Mountain Base. Your moral has regenerated to 100. If you rest, you gain even more health. You can also buy more rations.</p>
+            <li id="gamePart4Selection1">Press 1 to go the next five miles.</li>
+            <li id="gamePart4Selection2">Press 2 to rest (Gain health)</li>
+            <li id="gamePart4Selection3">Press 3 to buy 50 rations with 1 coin.</li>
+        </div>
         <div id="gameOver">
             <h1>Your team passed out...</h1>
             <p>S&R have been dispatched to provide medical care to your team. Your expedition ends here. <br>Press `
                 to restart.</p>
-            <!-- <div class="fiveColumn">
-                <div class="column">
-                    <h3>Health</h3>
-                    <p class="health">100</p>
-                </div>
-                <div class="column">
-                    <h3>Morale</h3>
-                    <p class="morale">100</p>
-                </div>
-                <div class="column">
-                    <h3>Rations</h3>
-                    <p class="rations">2000</p>
-                </div>
-                <div class="column">
-                    <h3>Distance to next</h3>
-                    <p>-</p>
-                </div>
-                <div class="column">
-                    <h3>Days passed</h3>
-                    <p class="days">0</p>
-                </div>
-            </div> -->
         </div>
         <div id="stats">
             <div id="event"></div>
@@ -97,6 +81,10 @@
                 <div class="column">
                     <h3>Days passed</h3>
                     <p id="days">0</p>
+                </div>
+                <div class="column">
+                    <h3>Coins</h3>
+                    <p id="coins">100</p>
                 </div>
             </div>
         </div>
