--- a/gamepage.html
+++ b/gamepage.html
@@ -36,8 +36,15 @@
             background-color: rgb(69, 65, 65);
             padding: 10px;
             font-size: 20px;
-            width: 100%;
+            width: 750px;
             height: 450px;
+            margin: 15% auto;
+            /* 15% from the top and centered */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 50%;
+            /* Could be more or less, depending on screen size */
+
         }
 
         #musicGrid {
@@ -51,124 +58,171 @@
             height: 60px;
             padding: 5px;
         }
-        .progress{
+
+        .progress {
             width: 100%;
             height: 3px;
             background-color: grey;
         }
-        .progressBar{
+
+        .progressBar {
             width: 50%;
             height: 100%;
             background-color: black;
         }
-        button{
+
+        button {
             background-color: rgb(168, 149, 149);
             color: white;
             border: none;
             padding: 5px;
             font-size: 10px;
         }
+
+        #modal {
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Stay in place */
+            z-index: 1;
+            /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%;
+            /* Full width */
+            height: 100%;
+            /* Full height */
+            overflow: auto;
+            /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0);
+            /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4);
+            /* Black w/ opacity */
+        }
     </style>
     <h1>Welcome to the official site to play MISSION: ANTARCTICA</h1>
     <div id="gamePlace">
-        <iframe src="./index.html" frameborder="0" width="750px" height="500px"></iframe>
+        <iframe src="./index.html" frameborder="0" width="750px" height="500px"></iframe><br>
+        <button id="openMusic">Radio</button>
     </div>
-    <div id="radio">
-        <h2>Music</h2>
-        <p>Choose from a variety of music we handmade ourselves! Completely optional, just builds the environment.
-        </p>
-        <div id="musicGrid">
-            <div class="audio">
-                <p title="By That_Piano_Kid">Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+    <div id="modal">
+        <div id="radio">
+            <h2>Music</h2>
+            <p>Choose from a variety of music we handmade ourselves! Completely optional, just builds the environment.
+            </p>
+            <div id="musicGrid">
+                <div class="audio">
+                    <p title="By That_Piano_Kid">Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Going fast</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Going fast</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
-            </div>
-            <div class="audio">
-                <p>Moving Forward</p>
-                <audio src="">
-                    <source src="">
-                </audio>
-                <div class="progress">
-                    <div class="progressBar" id="music1"></div>
+                <div class="audio">
+                    <p>Moving Forward</p>
+                    <audio src="">
+                        <source src="">
+                    </audio>
+                    <div class="progress">
+                        <div class="progressBar" id="music1"></div>
+                    </div>
+                    <button>Play</button>
+                    <button>Pause</button>
                 </div>
-                <button>Play</button>
-                <button>Pause</button>
             </div>
         </div>
     </div>
+
     <h1>To play, click in the iframe first!</h1>
 </body>
+<script>
+    // Get the modal
+    var modal = document.getElementById("modal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("openMusic");
+
+    // When the user clicks on the button, open the modal
+    btn.onclick = function () {
+        modal.style.display = "block";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 
 </html>
