--- a/gamepage.html
+++ b/gamepage.html
@@ -5,101 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELCOME</title>
+    <link rel="stylesheet" href="gamepage.css">
 </head>
 
 <body>
-    <style>
-        * {
-            box-sizing: border-box;
-            user-select: none;
-        }
-
-        @font-face {
-            font-family: orange-kid;
-            src: url(orange\ kid.otf);
-        }
-
-        body {
-            text-align: center;
-            font-family: orange-kid;
-            font-size: 32px;
-        }
-
-        #gamePlace {
-            width: 100%;
-            text-align: center;
-        }
-
-        #radio {
-            text-align: left;
-            color: white;
-            background-color: rgb(69, 65, 65);
-            padding: 10px;
-            font-size: 20px;
-            width: 750px;
-            height: 450px;
-            margin: 15% auto;
-            /* 15% from the top and centered */
-            padding: 20px;
-            border: 1px solid #888;
-            width: 50%;
-            /* Could be more or less, depending on screen size */
-
-        }
-
-        #musicGrid {
-            display: grid;
-            grid-template-columns: 50% 50%;
-            grid-template-rows: 25% 25% 25% 25%;
-        }
-
-        .audio {
-            font-size: smaller;
-            height: 60px;
-            padding: 5px;
-        }
-
-        .progress {
-            width: 100%;
-            height: 3px;
-            background-color: grey;
-        }
-
-        .progressBar {
-            width: 50%;
-            height: 100%;
-            background-color: black;
-        }
-
-        button {
-            background-color: rgb(168, 149, 149);
-            color: white;
-            border: none;
-            padding: 5px;
-            font-size: 10px;
-        }
-
-        #modal {
-            display: none;
-            /* Hidden by default */
-            position: fixed;
-            /* Stay in place */
-            z-index: 1;
-            /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%;
-            /* Full width */
-            height: 100%;
-            /* Full height */
-            overflow: auto;
-            /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0);
-            /* Fallback color */
-            background-color: rgba(0, 0, 0, 0.4);
-            /* Black w/ opacity */
-        }
-    </style>
     <h1>Welcome to the official site to play MISSION: ANTARCTICA</h1>
     <div id="gamePlace">
         <iframe src="./index.html" frameborder="0" width="750px" height="500px"></iframe><br>
@@ -205,24 +114,6 @@
 
     <h1>To play, click in the iframe first!</h1>
 </body>
-<script>
-    // Get the modal
-    var modal = document.getElementById("modal");
-
-    // Get the button that opens the modal
-    var btn = document.getElementById("openMusic");
-
-    // When the user clicks on the button, open the modal
-    btn.onclick = function () {
-        modal.style.display = "block";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-        if (event.target == modal) {
-            modal.style.display = "none";
-        }
-    }
-</script>
+<script src="gamepage.js"></script>
 
 </html>
